--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <header>
         <h1>PWO Karen to Unicode Converter</h1>
     </header>
-    <div class="theme-switch-wrapper">
-        <label class="theme-switch" for="checkbox">
-            <input type="checkbox" id="checkbox" />
-            <div class="slider round">
-                <span class="icon light">☀️</span>
-                <span class="icon dark">🌙</span>
-            </div>
-        </label>
-    </div>
+<div class="theme-switch-wrapper">
+    <label class="theme-switch" for="checkbox">
+        <input type="checkbox" id="checkbox" />
+        <div class="slider round">
+            <span class="icon light">☀️</span>
+            <span class="icon dark">🌙</span>
+        </div>
+    </label>
+</div>
     <div class="container">
         <textarea id="input" placeholder="Enter text here..."></textarea>
         <button id="convertButton">Convert Text</button>
@@ -26,9 +26,7 @@
         <button id="copyButton">Copy Result</button>
     </div>
     <footer>
-        <p><span style="color: #ffffff;">Copyright &copy; Developed by Truefinder Studio</span></p>
-        <a href="#privacy-policy">Privacy Policy</a> |
-        <a href="#terms-and-conditions">Terms & Conditions</a>
+        <p><span style="color: #ffffff;">Made with ❤ by Truefinder Studio</span></p>
     </footer>
     <script src="converter.js"></script>
     <script src="main.js"></script>
