--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FM Abhaya To Unicode Converter</title>
+    <title>PWO Eastern Karen to Unicode</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>FM Abhaya To Unicode Converter</h1>
+        <h1>PWO Eastern Karen to Unicode</h1>
     </header>
 <div class="theme-switch-wrapper">
     <label class="theme-switch" for="checkbox">
@@ -20,12 +20,9 @@
     </label>
 </div>
     <div class="container">
-
-       <textarea id="input" placeholder="w wd we wE b B'''" spellcheck="false"></textarea>
-
-
+        <textarea id="input" placeholder="Enter text here..."></textarea>
         <button id="convertButton">Convert Text</button>
- <textarea id="output" placeholder="Results will appear here..." spellcheck="false"></textarea>
+        <textarea id="output" placeholder="Results will appear here..."></textarea>
         <button id="copyButton">Copy Result</button>
     </div>
     <footer>
